--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </div>
                 </div>
                 <div class="hero-image-wrapper">
-                    <img src="/images/hero-image.png" alt="bbal" class="hero-image">
+                    <img src="hero-image.png" alt="bbal" class="hero-image">
                 </div>
             </div>
         </section>
@@ -71,7 +71,7 @@
         <section class="about-section" id="about">
             <div class="section-content">
                 <div class="about-image-wrapper">
-                    <img src="/images/about-us-icon.png" alt="About Image" class="about-image">
+                    <img src="about-us-icon.png" alt="About Image" class="about-image">
                 </div>
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
@@ -108,19 +108,19 @@
                     <div class="slider-wrapper">
                         <ul class="gallery-list swiper-wrapper">
                             <li class="gallery swiper-slide">
-                                <img src="/images/hooper-2.jpeg" alt="Hooper-1" class="hooper-image">
+                                <img src="hooper-2.jpeg" alt="Hooper-1" class="hooper-image">
                             </li>
                             <li class="gallery swiper-slide">
-                                <img src="/images/hooper-2.jpeg" alt="Hooper-1" class="hooper-image">
+                                <img src="hooper-2.jpeg" alt="Hooper-1" class="hooper-image">
                             </li>
                             <li class="gallery swiper-slide">
-                                <img src="/images/hooper-2.jpeg" alt="Hooper-1" class="hooper-image">
+                                <img src="hooper-2.jpeg" alt="Hooper-1" class="hooper-image">
                             </li>
                             <li class="gallery swiper-slide">
-                                <img src="/images/hooper-2.jpeg" alt="Hooper-1" class="hooper-image">
+                                <img src="hooper-2.jpeg" alt="Hooper-1" class="hooper-image">
                             </li>
                             <li class="gallery swiper-slide">
-                                <img src="/images/hooper-2.jpeg" alt="Hooper-1" class="hooper-image">
+                                <img src="hooper-2.jpeg" alt="Hooper-1" class="hooper-image">
                             </li>
                         </ul>
 
